--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="row">
     
-    <div class="col-12 mt-5 overflow-hidden">
+    <div class="col-12 mt-4 overflow-hidden">
       <app-slider></app-slider>
     </div>
   </div>
@@ -23,7 +23,7 @@
 </div>
 <!-- វគ្គសិក្សាពេញនិយម -->
 <div class="row">
-  <div class="col-12 mb-3  ps-3 fs-4 text-danger border-bottom p-2 mt-3">វគ្គសិក្សាពេញនិយម</div>
+  <div class="col-12 col-md-12 col-lg-12 mb-3  ps-3 fs-4 text-danger border-bottom p-2 mt-3">វគ្គសិក្សាពេញនិយម</div>
     <app-courses></app-courses>
 </div>
 <!--ចក្ខុវិស័យ  -->
