--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <!-- Responsive Header -->
-<div class="container-fluid bg-primary text-white py-2">
+<div class="container-fluid bg-blue shadow text-white py-2 ">
   <div class="row align-items-center">
     
     <!-- Logo -->
@@ -14,15 +14,16 @@
 
     <!-- Icons & Dropdown -->
     <div class="col-6 col-md-3 text-end pe-4">
-      <i class="fa-regular fa-bell fs-5 me-3"></i>
+      <!-- <i class="fa-regular fa-bell fs-5 me-3"></i> -->
+     <a routerLink="/contact" class="text-white"><i class="fa-solid fa-phone-volume fs-5 me-3"></i></a>
 
       <!-- Dropdown -->
       <div class="dropdown d-inline">
         <i class="fa-solid fa-circle-user fs-5 " data-bs-toggle="dropdown" aria-expanded="false" style="cursor: pointer;"></i>
         <ul class="dropdown-menu dropdown-menu-end">
-          <li><a class="dropdown-item" href="#">👤 {{ username }}</a></li>
+          <li><a class="dropdown-item" routerLink="/personal">👤 {{ username }}</a></li>
           <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item" (click)="logout()" style="cursor: pointer;">🚪 ចេញ</a></li>
+          <li><a class="dropdown-item" (click)="logout()" style="cursor: pointer;"><i class="fa-solid fa-sign-out-alt"></i> ចេញ</a></li>
         </ul>
       </div>
     </div>
