--- a/src/app/home-header/home-header.component.css
+++ b/src/app/home-header/home-header.component.css
@@ -1,3 +1,7 @@
+.bg-blue{
+    background-color: #262a95;
+}
+
 .mobile-bottom-nav {
   position: fixed;
   bottom: 0;
@@ -8,16 +12,29 @@
   justify-content: space-around;
   align-items: center;
   z-index: 1050;
-  background-color: #007bff; /* or your primary color */
+  background-color: #dc3545; /* or your primary color */
   border-top: 1px solid #ccc;
 }
 .mobile-bottom-nav .nav-item {
   flex: 1;
-  font-size: 12px;
+  font-size: 18px;
   padding: 4px 0;
   text-decoration: none;
 }
 
 .mobile-bottom-nav .nav-item i {
   font-size: 18px;
+}
+
+/* Highlight active nav item */
+.nav-link.active,
+.nav-icon.active {
+  color: #0d6efd; /* Bootstrap primary or any color */
+  font-weight: bold;
+  border-bottom: 2px solid #0d6efd;
+}
+
+.nav-icon.active i,
+.nav-link.active i {
+  color: #0d6efd;
 }
