--- a/src/app/home-header/home-header.component.html
+++ b/src/app/home-header/home-header.component.html
@@ -12,38 +12,43 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <!-- <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link active" routerLink="/">ទំព័រដើម</a></li>
-                <li class="nav-item"><a class="nav-link active" routerLink="/payment">អំពី</a></li>
-                <li class="nav-item"><a class="nav-link active" href="#">ព័ត៌មានថ្មីៗ</a></li>
+                <li class="nav-item"><a class="nav-link active" routerLink="/">អំពី</a></li>
+                <li class="nav-item"><a routerLink="/news" class="nav-link active" href="#">ព័ត៌មានថ្មីៗ</a></li>
                 <li class="nav-item"><a class="nav-link active" href="#">សេវាកម្ម</a></li>
-                <li class="nav-item"><a class="nav-link active" href="#">ទំនាក់ទំនង</a></li>
+                <li class="nav-item"><a routerLink="/contact" class="nav-link active" href="#">ទំនាក់ទំនង</a></li>
               </ul>
-            </div>
+            </div> -->
           </div>
         </nav>
       </div>
       <div class="col-1"></div>
       <div class="col-1 pt-3">
-        <a routerLink="/login" class="btn btn-danger"><i class="fa-solid fa-lock"></i> ចូល</a>
+        <a routerLink="/login" class="btn btn-danger text-white"><i class="fa-solid fa-lock"></i> ចូល</a>
       </div>
     </div>
   </div>
 </div>
-
+<!-- Mobile to Nav -->
+<div class="row bg-primary p-2 d-md-none">
+  <div class="col-8">
+<a routerLink="/"><img src="/img/pcc-logo.png" alt="my image" class="w-100 ps-20px"></a>
+  </div>
+</div>
 <!-- Mobile Bottom Nav -->
 <nav class="mobile-bottom-nav d-md-none shadow">
-  <a routerLink="/" class="nav-item text-white text-center">
+  <a routerLink="/" routerLinkActive="active" class="nav-item nav-link text-white text-center">
     <i class="fa-solid fa-house"></i><br><small>ទំព័រដើម</small>
   </a>
-  <a routerLink="/payment" class="nav-item text-white text-center">
+  <a routerLink="/about" routerLinkActive="active" class="nav-item nav-link text-white text-center">
     <i class="fa-solid fa-circle-info"></i><br><small>អំពី</small>
   </a>
-  <a href="#" class="nav-item text-white text-center">
+  <a routerLink="/news" routerLinkActive="active" class="nav-item nav-link text-white text-center">
     <i class="fa-solid fa-newspaper"></i><br><small>ព័ត៌មាន</small>
   </a>
-  <a href="#" class="nav-item text-white text-center">
+  <a routerLink="/contact" routerLinkActive="active" class="nav-item nav-link text-white text-center">
     <i class="fa-solid fa-phone"></i><br><small>ទំនាក់ទំនង</small>
   </a>
   <a routerLink="/login" class="nav-item text-white text-center">
