--- a/src/app/side-bar2/side-bar2.component.css
+++ b/src/app/side-bar2/side-bar2.component.css
@@ -3,6 +3,10 @@ body{
   position: relative;
   font-family: "Open Sans", serif;
 }
+/* .bg-blue{
+  background-color: #051923;
+} */
+
 .sidebar {
   position:fixed;
   width: 246px;
@@ -10,7 +14,7 @@ body{
   border-radius: 0;
   /* border-right: 1px solid blue; */
  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-  /* background: rgb(220, 219, 219); */
+  background-color: #fff;
   height: calc(103vh - 32px);
   transition: all 0.4s ease;
 }
@@ -84,7 +88,7 @@ margin-left: 50px;
   transform: translateY(50%);
   transition: all 0.4s ease;
 }
-.sidebar-nav .secondary-nav {
+.sidebar-nav .secondary-nav { 
   position: absolute;
   bottom: 50px;
   width: 100%;
@@ -143,6 +147,21 @@ margin-left: 50px;
     bottom: 0;
     margin: 40px 0 30px;
   }
+}
+
+
+
+/* Highlight active nav item */
+.nav-link.active,
+.nav-icon.active {
+  color: #0d6efd; /* Bootstrap primary or any color */
+  font-weight: bold;
+  border-bottom: 2px solid #0d6efd;
+}
+
+.nav-icon.active i,
+.nav-link.active i {
+  color: #0d6efd;
 }
 
 .mobile-footer-nav {
