--- a/src/app/side-bar2/side-bar2.component.html
+++ b/src/app/side-bar2/side-bar2.component.html
@@ -1,18 +1,18 @@
 <!-- Desktop Sidebar -->
-<div class="row pt-4 d-none d-md-block">
+<div class="row pt-3 d-none d-md-block bg-blue">
   <div class="col-12">
     <div class="sidebar">
       <nav class="sidebar-nav">
         <ul class="nav-list primary-nav fs-5">
-          <li class="nav-item"><a href="#"><span class="nav-label1">កម្មវិធី</span></a></li>
-          <li class="nav-item"><a href="#" class="nav-link"><i class="fa-solid fa-user"></i><span class="nav-label">ប្រវត្តិរូប</span></a></li>
-          <li class="nav-item"><a href="#" class="nav-link"><i class="fa-solid fa-book"></i><span class="nav-label">មេរៀនរបស់ខ្ញុំ</span></a></li>
-          <li class="nav-item"><a href="#" class="nav-link"><i class="fa-solid fa-gift"></i><span class="nav-label">ឥតគិតថ្លៃ</span></a></li>
-          <li class="nav-item"><a routerLink="/course" class="nav-link"><i class="fa-solid fa-film"></i><span class="nav-label">វគ្គសិក្សា</span></a></li>
-          <li class="nav-item"><a href="#" class="nav-link"><i class="fa-solid fa-bullhorn"></i><span class="nav-label">ព័ត៌មានថ្មីៗ</span></a></li>
+          <li class="nav-item"><a><span class="nav-label1">កម្មវិធី</span></a></li>
+          <li class="nav-item"><a routerLink="/personal" routerLinkActive="active" class="nav-link"><i class="fa-solid fa-user"></i><span class="nav-label">ប្រវត្តិរូប</span></a></li>
+          <li class="nav-item"><a routerLink="/myLesson" routerLinkActive="active" class="nav-link"><i class="fa-solid fa-book"></i><span class="nav-label">មេរៀនរបស់ខ្ញុំ</span></a></li>
+          <!-- <li class="nav-item"><a routerLink="/" routerLinkActive="active" class="nav-link"><i class="fa-solid fa-gift"></i><span class="nav-label">ឥតគិតថ្លៃ</span></a></li> -->
+          <li class="nav-item"><a routerLink="/dashboard" routerLinkActive="active" class="nav-link"><i class="fa-solid fa-film"></i><span class="nav-label">វគ្គសិក្សា</span></a></li>
+          <li class="nav-item"><a href="#" routerLinkActive="active" class="nav-link"><i class="fa-solid fa-bullhorn"></i><span class="nav-label">ព័ត៌មានថ្មីៗ</span></a></li>
         </ul>
         <ul class="nav-list secondary-nav fs-5">
-          <li class="nav-item"><a class="nav-link" (click)="logout()" style="cursor: pointer;">🚪<span class="nav-label">ចេញ</span></a></li>
+          <li class="nav-item"><a class="nav-link" (click)="logout()" style="cursor: pointer;"><i class="fa-solid fa-sign-out-alt"></i><span class="nav-label">ចេញ</span></a></li>
         </ul>
       </nav>
     </div>
@@ -21,9 +21,9 @@
 
 <!-- Mobile Bottom Navbar -->
 <nav class="mobile-footer-nav d-md-none">
-  <a routerLink="/" class="nav-icon"><i class="fa-solid fa-house"></i><small>គេហទំព័រ</small></a>
-  <a href="#" class="nav-icon"><i class="fa-solid fa-user"></i><small>ប្រវត្តិរូប</small></a>
-  <a routerLink="/course" class="nav-icon"><i class="fa-solid fa-film"></i><small>វគ្គ</small></a>
-  <a href="#" class="nav-icon"><i class="fa-solid fa-bell"></i><small>ដំណឹង</small></a>
+  <!-- <a routerLink="/" class="nav-icon"><i class="fa-solid fa-house"></i><small>គេហទំព័រ</small></a> -->
+  <a routerLink="/personal" routerLinkActive="active" class="nav-icon"><i class="fa-solid fa-user"></i><small>ប្រវត្តិរូប</small></a>
+  <a routerLink="/dashboard" routerLinkActive="active" class="nav-icon"><i class="fa-solid fa-film"></i><small>វគ្គ</small></a>
+  <a routerLink="/myLesson" class="nav-icon"><i class="fa-solid fa-book"></i><small>មេរៀនរបស់ខ្ញុំ</small></a>
   <a (click)="logout()" class="nav-icon"><i class="fa-solid fa-sign-out-alt"></i><small>ចេញ</small></a>
 </nav>
