--- a/src/app/slider/slider.component.css
+++ b/src/app/slider/slider.component.css
@@ -13,3 +13,20 @@
     width: 100%;
     height: 500px;
   }
+.carousel-image {
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+}
+
+@media (max-width: 768px) {
+  .carousel-image {
+    height: 350px;
+  }
+}
+
+@media (max-width: 576px) {
+  .carousel-image {
+    height: 250px;
+  }
+}
