--- a/src/styles.css
+++ b/src/styles.css
@@ -2,9 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Suwannaphum:wght@100;300;400;700;900&display=swap');
 *{
     font-family: "Suwannaphum", serif;
+
 }
 body{
     
     overflow: hidden;
     overflow-y: scroll;
+}
+.card{
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;  
 }
